<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:text="@string/guess_3_check"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/Guess3Check"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="222dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:text="@string/guess_3"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/Guess3"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="@string/guess_2_check"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/Guess2Check"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="223dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:text="@string/guess_2"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/Guess1Check"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="226dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/guess_1_check"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/Guess1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="224dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/guess_1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="16dp"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_simple"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_4_letter_guess_here"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></EditText>

    <TextView
        android:id="@+id/Guess3"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="44dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Answer"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginBottom="84dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/et_simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Guess2Check"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/Guess1"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Guess2"
        android:layout_width="112dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/Guess3Check"
        android:layout_width="98dp"
        android:layout_height="56dp"
        android:layout_marginEnd="44dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <TextView
        android:id="@+id/Guess1Check"
        android:layout_width="96dp"
        android:layout_height="46dp"
        android:layout_marginEnd="48dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

</androidx.constraintlayout.widget.ConstraintLayout>